# Sky-Route-Optimizaition

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: CMakeLists.txt
backend/src/: main.cpp
src/: App.jsx  main.jsx
